json_parser/src/snapshots/json_parser__token__tests__tokenize_escaped_1.snap
---
source: json_parser/src/token.rs
expression: "&lexer.collect::<Vec<_>>()"
snapshot_kind: text
---
[
    Token {
        kind: LBrace,
        origin: "{",
    },
    Token {
        kind: String,
        origin: "key",
    },
    Token {
        kind: Colon,
        origin: ":",
    },
    Token {
        kind: String,
        origin: "Hello, \\\"world!\\\"",
    },
    Token {
        kind: RBrace,
        origin: "}",
    },
    Token {
        kind: Eof,
        origin: "",
    },
]
